<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/openATbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_at" />

    <Button
        android:id="@+id/changeToENbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language_en" />

    <Button
        android:id="@+id/changeToPTbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language_pt" />

    <TextView
        android:id="@+id/pageIdentifiertv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AT1" />

</LinearLayout>