<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AT2"
    android:padding="20dp">

    <Button
        android:id="@+id/closeATbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/studentInfotv"
        android:layout_marginTop="16dp"
        android:text="@string/close_at" />

    <TextView
        android:id="@+id/pageIdentifierAT2tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AT2" />

    <TextView
        android:id="@+id/studentInfotv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageIdentifierAT2tv"
        android:layout_marginTop="16dp"
        android:text="@string/student_info" />

</RelativeLayout>